--- a/testing/test.html
+++ b/testing/test.html
@@ -60,7 +60,7 @@
                             class="entity-img" />
                     </figure>
                     <div class="content">
-                        <p class="title">Alexis Berry</p>
+                        <p class="title">xyz</p>
                         <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the
                             1500s, when an unknown printer took a galley of type and scrambled it to make a type
                             specimen book.</span>
@@ -73,7 +73,7 @@
                             class="entity-img" />
                     </figure>
                     <div class="content">
-                        <p class="title">Billie Pierce</p>
+                        <p class="title">xyz</p>
                         <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the
                             1500s, when an unknown printer took a galley of type and scrambled it to make a type
                             specimen book.</span>
@@ -86,7 +86,7 @@
                             class="entity-img" />
                     </figure>
                     <div class="content">
-                        <p class="title">Trevor Copeland</p>
+                        <p class="title">xyz</p>
                         <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the
                             1500s, when an unknown printer took a galley of type and scrambled it to make a type
                             specimen book.</span>
@@ -99,7 +99,7 @@
                             class="entity-img" />
                     </figure>
                     <div class="content">
-                        <p class="title">Bernadette Newman</p>
+                        <p class="title">xyz</p>
                         <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the
                             1500s, when an unknown printer took a galley of type and scrambled it to make a type
                             specimen book.</span>
@@ -120,9 +120,6 @@
                         <img src="/Past_event_Photos/event1.jpg"
                             class="entity-img" />
                     </figure>
-                    <!-- <div class="content">
-                        <p class="title">Shaun Matthews</p>
-                    </div> -->
                 </div>
                 <div class="swiper-slide">
                     <figure class="slide-bgimg"
@@ -140,9 +137,6 @@
                         <img src="/Past_event_Photos/event3.jpeg"
                             class="entity-img" />
                     </figure>
-                    <!-- <div class="content">
-                        <p class="title">Billie Pierce</p>
-                    </div> -->
                 </div>
                 <div class="swiper-slide">
                     <figure class="slide-bgimg"
@@ -150,9 +144,6 @@
                         <img src="/Past_event_Photos/event4.jpeg"
                             class="entity-img" />
                     </figure>
-                    <!-- <div class="content">
-                        <p class="title">Trevor Copeland</p>
-                    </div> -->
                 </div>
                 <div class="swiper-slide">
                     <figure class="slide-bgimg"
