--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    
+
     <!-- Header section -->
     <header class="header">
         <a href="#" class="logo"><span>A</span>DYPSOE</a>
@@ -49,6 +49,18 @@
             <div class="swiper-pagination"></div>
         </div>
     </section>
+    <!-- Scrolling Notice animation -->
+    <div class="container">
+        <div class="scrolling-container">
+            <div class="scrolling-content">
+                <span>Notice:- </span> Notice of ACE Fee Payment <a href="#">click</a>
+            </div>
+            <div class="scrolling-content">
+                Notice of Selection of the ACE Committee members for A.Y 2023-24 <a href="#">click</a>
+            </div>
+        </div>
+    </div>
+
 
     <!-- about section -->
     <section class="about" id="about">
@@ -441,7 +453,7 @@
                 <a href="#"><i class="fas fa-arrow-right"></i> feedback</a>
             </div>
             <div class="box">
-                <h3>contact any query</h3>
+                <h3>contact for any query</h3>
                 <a href="#"><i class="fas fa-phone"></i> +91-987654321</a>
                 <a href="#"><i class="fas fa-phone"></i> +91-987654321</a>
                 <a href="#"><i class="fas fa-envelope"></i> president@gmail.com</a>
@@ -474,7 +486,7 @@
             <div class="theme-btn" style="background: #FC427B;"></div>
         </div>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
